--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,14 @@
         <activity android:name=".NumbersActivity"
                   android:label="@string/category_numbers">
         </activity>
-        <activity android:name=".FamilyActivity">
+        <activity android:name=".FamilyActivity"
+                  android:label="@string/category_family">
         </activity>
-        <activity android:name=".ColorsActivity">
+        <activity android:name=".ColorsActivity"
+                  android:label="@string/category_colors">
         </activity>
-        <activity android:name=".PhrasesActivity">
+        <activity android:name=".PhrasesActivity"
+                  android:label="@string/category_phrases">
         </activity>
     </application>
 
